--- a/01-前端开发基础/02-CSS-初识/08 常用的css属性-width和height.html
+++ b/01-前端开发基础/02-CSS-初识/08 常用的css属性-width和height.html
@@ -8,10 +8,15 @@
     <title>Document</title>
     <style>
         div {
+            /* 背景颜色 */
             background-color: pink;
+            /* 字体大小 */
             font-size: 20px;
+            /* 文字颜色 */
             color: skyblue;
+            /*  宽度  */
             width: 200px;
+            /* 高度 */
             height: 200px;
         }
     </style>
