--- a/01-前端开发基础/03-CSS-文本/03_CSS属性之text-indent.html
+++ b/01-前端开发基础/03-CSS-文本/03_CSS属性之text-indent.html
@@ -10,7 +10,7 @@
         /* 了解！！！ */
         .box {
             /* 首字母缩进 2 个字符 */
-            text-indent: 2;
+            text-indent: 2em;
         }
     </style>
 </head>
