--- a/01-前端开发基础/03-CSS-文本/03_CSS属性之text-indent.html
+++ b/01-前端开发基础/03-CSS-文本/03_CSS属性之text-indent.html
@@ -17,8 +17,7 @@
 
 <body>
     <div class="box">
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore, similique. Fugit vel quo eveniet cupiditate adipisci autem dolor, officiis tempora pariatur rerum libero veritatis et dolores iure? Suscipit, laudantium optio.
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore, similique. Fugit vel quo eveniet cupiditate adipisci autem dolor, officiis tempora pariatur rerum libero veritatis et dolores iure? Suscipit, laudantium optio.
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore, similique. Fugit vel quo eveniet cupiditate adipisci autem dolor, officiis tempora pariatur rerum libero veritatis et dolores iure? Suscipit, laudantium optio.Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore, similique. Fugit vel quo eveniet cupiditate adipisci autem dolor, officiis tempora pariatur rerum libero veritatis et dolores iure? Suscipit, laudantium optio.
     </div>
 </body>
 
