--- a/01-前端开发基础/03-CSS-文本/04_CSS属性之text-align.html
+++ b/01-前端开发基础/03-CSS-文本/04_CSS属性之text-align.html
@@ -7,13 +7,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-
+        .box{
+            background-color: skyblue;
+            width: 200px;
+            height: 200px;
+            color: #fff;
+            
+            /* 行内内容（如：文字）相对于它的块父元素的对齐方式 */
+            text-align: center;
+        }
     </style>
 </head>
 
 <body>
 
-    
+    <div class="box">我是div元素</div>
 
 </body>
 
