--- a/01-前端开发基础/03-CSS-文本/04_CSS属性之text-align.html
+++ b/01-前端开发基础/03-CSS-文本/04_CSS属性之text-align.html
@@ -13,7 +13,7 @@
             height: 200px;
             color: #fff;
             
-            /* 行内内容（如：文字）相对于它的块父元素的对齐方式 */
+            /* 行内级元素（如：文字）相对于它的块父元素的对齐方式 */
             text-align: center;
         }
     </style>
