--- a/01-前端开发基础/03-CSS-文本/05_CSS属性之text-align块级元素.html
+++ b/01-前端开发基础/03-CSS-文本/05_CSS属性之text-align块级元素.html
@@ -17,9 +17,11 @@
             text-align: center;
         }
 
-        .content{
+        .content {
             /* 通过下面的代码，可以使得 text-align: center 生效 */
             /* display: inline-block; */
+            /* 下面的代码，也可以使得块级元素居中 */
+            /* margin: 0 auto; */
             width: 100px;
             height: 100px;
             background-color: red;
