--- a/01-前端开发基础/04-CSS-字体/02_line-height.html
+++ b/01-前端开发基础/04-CSS-字体/02_line-height.html
@@ -8,7 +8,13 @@
     <title>Document</title>
     <style>
         .box {
+            width: 200px;
+            height: 200px;
             background-color: pink;
+            /* 文字水平居中 */
+            text-align: center;
+            /* 文字垂直居中 */
+            line-height: 200px;
         }
     </style>
 </head>
