--- a/01-前端开发基础/04-CSS-字体/03_font.html
+++ b/01-前端开发基础/04-CSS-字体/03_font.html
@@ -13,7 +13,7 @@
             background-color: pink;
 
             /* 简写属性 */
-            font: 12px/1.5 'Microsoft YaHei', 'Heiti SC', tahoma, arial, Hiragino Sans GB, "\5B8B\4F53", sans-serif;
+            font: 12px/1.5 "Microsoft YaHei", "Heiti SC", tahoma, arial, "Hiragino Sans GB", "\5B8B\4F53", sans-serif;
         }
     </style>
 </head>
