--- a/01-前端开发基础/05-CSS-选择器/01_通用选择器.html
+++ b/01-前端开发基础/05-CSS-选择器/01_通用选择器.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        /* 通用选择器 */
+        /* 通用选择器：效率比较低，尽量不要使用！！！ */
         * {
             font-size: 30px;
         }
