--- a/01-前端开发基础/05-CSS-选择器/04_id选择器.html
+++ b/01-前端开发基础/05-CSS-选择器/04_id选择器.html
@@ -18,6 +18,7 @@
     <div>我是 div 元素</div>
     <p>我是 p 元素</p>
 
+    <!-- 在同一 HTML 文档中，id 不要重复，应该是唯一的。 -->
     <div id="box">
         <h2>我是 h2 元素</h2>
         <p>我也是 p 元素</p>
