--- a/01-前端开发基础/05-CSS-选择器/05_属性选择器.html
+++ b/01-前端开发基础/05-CSS-选择器/05_属性选择器.html
@@ -11,6 +11,10 @@
         [title] {
             background-color: pink;
         }
+
+        [title='div'] {
+            color: red;
+        }
     </style>
 </head>
 
