--- a/01-前端开发基础/05-CSS-选择器/11_并集选择器.html
+++ b/01-前端开发基础/05-CSS-选择器/11_并集选择器.html
@@ -8,6 +8,7 @@
     <title>Document</title>
     <style>
         /* 并集选择器，使用 ，隔开 */
+        /* 应用场景：给多个元素设置相同的样式 */
         div,
         p {
             color: red;
