--- a/01-前端开发基础/05-CSS-选择器/12_伪类.html
+++ b/01-前端开发基础/05-CSS-选择器/12_伪类.html
@@ -9,13 +9,15 @@
     <style>
         /* 伪类是选择器的一种，它用于选择处于特定状态的元素。 */
         .box:hover {
-            background-color: #f00;
+            color: #f00;
         }
     </style>
 </head>
 
 <body>
     
+    <div class="box">我是div元素</div>
+    <div class="box">我是div元素</div>
     <div class="box">我是div元素</div>
     
 </html>
