--- a/01-前端开发基础/05-CSS-选择器/13_伪元素.html
+++ b/01-前端开发基础/05-CSS-选择器/13_伪元素.html
@@ -21,6 +21,15 @@
             color: pink;
             content: '321';
         }
+
+        .hot::after{
+            content: url('./images/hot-icon.svg');
+            vertical-align: middle;
+        }
+        .new::after{
+            content: url('./images/new-icon.svg');
+            vertical-align: middle;
+        }
     </style>
 </head>
 
@@ -28,6 +37,10 @@
 
     <div class="box item">我是div元素</div>
     <div class="box item">我是div元素</div>
+
+    <div class="hot">两乘客占网约车不下车被行拘7日</div>
+    <div>织密经贸往来 共谋繁荣发展</div>
+    <div class="new">全新本田雅阁上市 售17.98万元起</div>
 
 </body>
 
