--- a/01-前端开发基础/05-CSS-选择器/13_伪元素.html
+++ b/01-前端开发基础/05-CSS-选择器/13_伪元素.html
@@ -24,11 +24,17 @@
 
         .hot::after{
             content: url('./images/hot-icon.svg');
-            vertical-align: middle;
+
+            position: relative;
+            left: 5px;
+            top: 2px;
         }
         .new::after{
             content: url('./images/new-icon.svg');
-            vertical-align: middle;
+
+            position: relative;
+            left: 5px;
+            top: 2px;
         }
     </style>
 </head>
