--- a/01-前端开发基础/06-CSS属性的特性/08_元素的隐藏_visibility.html
+++ b/01-前端开发基础/06-CSS属性的特性/08_元素的隐藏_visibility.html
@@ -8,7 +8,7 @@
     <title>Document</title>
     <style>
         .box {
-            /* 元素不显示，但是会占据元素所在的空间。 */
+            /* 元素不显示，但是会占据元素应该占据的空间。 */
             visibility: hidden;
         }
     </style>
