--- a/01-前端开发基础/06-CSS属性的特性/09_元素的隐藏_rgba.html
+++ b/01-前端开发基础/06-CSS属性的特性/09_元素的隐藏_rgba.html
@@ -9,7 +9,11 @@
     <style>
         .box {
             /* color: rgba(255, 255, 255, 0); */
-            color: #0000;
+            /* color: #0000; */
+            /* 通过背景颜色的透明度来隐藏 */
+            /* background-color: #0000; */
+            background-color: transparent;
+            font-size: 0;
         }
     </style>
 </head>
