--- a/01-前端开发基础/06-CSS属性的特性/10_元素的隐藏_opacity.html
+++ b/01-前端开发基础/06-CSS属性的特性/10_元素的隐藏_opacity.html
@@ -8,11 +8,8 @@
     <title>Document</title>
     <style>
         .box {
-            /* color: rgba(255, 255, 255, 0); */
-            /* color: #0000; */
-            /* 通过背景颜色的透明度来隐藏 */
-            /* background-color: #0000; */
-            background-color: transparent;
+            /* 内容会隐藏 */
+            opacity: 0;
         }
     </style>
 </head>
