--- a/01-前端开发基础/06-CSS属性的特性/09_元素的隐藏_rgba.html
+++ b/01-前端开发基础/06-CSS属性的特性/09_元素的隐藏_rgba.html
@@ -11,6 +11,7 @@
             /* color: rgba(255, 255, 255, 0); */
             /* color: #0000; */
             /* 通过背景颜色的透明度来隐藏 */
+            /* alpha 只是设置当前 color 或 background-color 的透明度为某个值，不会影响到子元素 */
             /* background-color: #0000; */
             background-color: transparent;
         }
