--- a/01-前端开发基础/06-CSS属性的特性/10_元素的隐藏_opacity.html
+++ b/01-前端开发基础/06-CSS属性的特性/10_元素的隐藏_opacity.html
@@ -8,7 +8,7 @@
     <title>Document</title>
     <style>
         .box {
-            /* 内容会隐藏 */
+            /* 会让所有的子元素都设置透明度，包括文本、图片等 */
             opacity: 0;
         }
     </style>
