--- a/01-前端开发基础/06-CSS属性的特性/11_内容溢出_overflow.html
+++ b/01-前端开发基础/06-CSS属性的特性/11_内容溢出_overflow.html
@@ -10,7 +10,7 @@
         .box {
             width: 200px;
             height: 200px;
-            background-color: skyblue;
+            background-color: pink;
 
             /* 溢出的隐藏 */
             overflow: hidden;
