--- a/01-前端开发基础/07-CSS-盒子模型/04_边框_border.html
+++ b/01-前端开发基础/07-CSS-盒子模型/04_边框_border.html
@@ -7,12 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
+        body{
+            background-color: rgb(201, 198, 198);
+        }
         .box{
             width: 200px;
             height: 200px;
             background-color: pink;
 
-            border: 2px solid red;
+            border: 2px solid white;
         }
     </style>
 </head>
