--- a/01-前端开发基础/07-CSS-盒子模型/04_边框_border.html
+++ b/01-前端开发基础/07-CSS-盒子模型/04_边框_border.html
@@ -8,7 +8,7 @@
     <title>Document</title>
     <style>
         body{
-            background-color: rgb(201, 198, 198);
+            background-color: #f0f2f5;
         }
         .box{
             width: 200px;
