--- a/01-前端开发基础/07-CSS-盒子模型/06_外边距_margin.html
+++ b/01-前端开发基础/07-CSS-盒子模型/06_外边距_margin.html
@@ -7,19 +7,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
+        body {
+            font-size: 0;
+        }
+
         .box1 {
+            display: inline-block;
             width: 100px;
             height: 100px;
             background-color: pink;
         }
 
         .box2 {
-            /* 上边距 */
-            margin-top: 50px;
-
+            display: inline-block;
             width: 100px;
             height: 100px;
             background-color: red;
+            /* 左外边距 */
+            margin-left: 20px;
         }
     </style>
 </head>
