--- a/01-前端开发基础/07-CSS-盒子模型/06_外边距_margin.html
+++ b/01-前端开发基础/07-CSS-盒子模型/06_外边距_margin.html
@@ -8,6 +8,7 @@
     <title>Document</title>
     <style>
         body {
+            /* 暂时用来解决 inline-block 之间的间距问题*/
             font-size: 0;
         }
 
