--- a/01-前端开发基础/07-CSS-盒子模型/10_盒子模型案例.html
+++ b/01-前端开发基础/07-CSS-盒子模型/10_盒子模型案例.html
@@ -34,12 +34,16 @@
         .new:hover {
             background-color: #c81623;
         }
+
+        .vip {
+            background-color: #000;
+        }
     </style>
 </head>
 
 <body>
     <a href="#" class="new">新人福利</a>
-    <a href="#" class="new">PlUS会员</a>
+    <a href="#" class="new vip">PlUS会员</a>
 </body>
 
 </html>
