--- a/01-前端开发基础/07-CSS-盒子模型/10_盒子模型案例.html
+++ b/01-前端开发基础/07-CSS-盒子模型/10_盒子模型案例.html
@@ -19,31 +19,36 @@
             font-size: 12px;
         }
 
-        .new {
+        .btn {
             display: inline-block;
             width: 70px;
             height: 25px;
-            background-color: #e1251b;
-            color: #fff;
+
             font-size: 12px;
             text-align: center;
             line-height: 25px;
             border-radius: calc(25px/2);
         }
 
-        .new:hover {
+        .btn:hover {
             background-color: #c81623;
         }
 
+        .new {
+            background-color: #e1251b;
+            color: #fff;
+        }
+
         .vip {
-            background-color: #000;
+            background-color: #363636;
+            color: #e5d790;
         }
     </style>
 </head>
 
 <body>
-    <a href="#" class="new">新人福利</a>
-    <a href="#" class="new vip">PlUS会员</a>
+    <a href="#" class="btn new">新人福利</a>
+    <a href="#" class="btn vip">PlUS会员</a>
 </body>
 
 </html>
