--- a/01-前端开发基础/07-CSS-盒子模型/10_盒子模型案例.html
+++ b/01-前端开发基础/07-CSS-盒子模型/10_盒子模型案例.html
@@ -47,8 +47,8 @@
 </head>
 
 <body>
-    <a href="#" class="btn new">新人福利</a>
-    <a href="#" class="btn vip">PlUS会员</a>
+    <a href="#" class="btn new" target="_blank">新人福利</a>
+    <a href="#" class="btn vip" target="_blank">PlUS会员</a>
 </body>
 
 </html>
