--- a/01-前端开发基础/08-HTML的高级元素/01_有序列表.html
+++ b/01-前端开发基础/08-HTML的高级元素/01_有序列表.html
@@ -7,7 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        
+        ol,li{
+            padding: 0;
+            margin: 0;
+            list-style: none;
+        }
     </style>
 </head>
 
