--- a/01-前端开发基础/08-HTML的高级元素/05_热搜.html
+++ b/01-前端开发基础/08-HTML的高级元素/05_热搜.html
@@ -33,13 +33,28 @@
             line-height: 30px;
         }
 
-        ul > li .ranking {
+        ul>li .ranking {
             display: inline-block;
             width: 24px;
             height: 24px;
             text-align: center;
             line-height: 24px;
             background-color: skyblue;
+        }
+
+        ul>li:nth-child(1) .ranking {
+            color: red;
+            font-weight: 700;
+        }
+
+        ul>li:nth-child(2) .ranking {
+            color: palevioletred;
+            font-weight: 700;
+        }
+
+        ul>li:nth-child(3) .ranking {
+            color: purple;
+            font-weight: 700;
         }
 
         ul>li>a {
