--- a/01-前端开发基础/09-结构伪类/01_nth-child.html
+++ b/01-前端开发基础/09-结构伪类/01_nth-child.html
@@ -11,6 +11,11 @@
         ul li:nth-child(1) {
             color: red;
         }
+
+        /* 选择父元素中的所有偶数元素 */
+        ul li:nth-child(2n) {
+            color: aqua;
+        }
     </style>
 </head>
 
