--- a/01-前端开发基础/09-结构伪类/01_nth-child.html
+++ b/01-前端开发基础/09-结构伪类/01_nth-child.html
@@ -16,6 +16,11 @@
         ul li:nth-child(2n) {
             color: aqua;
         }
+
+        /* 选择父元素中的所有奇数元素 */
+        ul li:nth-child(2n+1) {
+            color: blue;
+        }
     </style>
 </head>
 
