--- a/01-前端开发基础/09-结构伪类/02_nth-of-type.html
+++ b/01-前端开发基础/09-结构伪类/02_nth-of-type.html
@@ -18,6 +18,7 @@
     <div class="box">
         <div>我是列表1</div>
         <p>我是p元素</p>
+        <p>我是p元素</p>
         <div>我是列表2</div>
         <div>我是列表3</div>
         <div>我是列表4</div>
