--- a/01-前端开发基础/10-额外知识补充/01_网络字体.html
+++ b/01-前端开发基础/10-额外知识补充/01_网络字体.html
@@ -10,7 +10,7 @@
         /* 加载自定义字体 */
         @font-face {
             font-family: 'xu';
-            src: url(./AaJianHaoTi/AaJianHaoTi-2.ttf);
+            src: url(./fonts/AaJianHaoTi-2.ttf);
         }
 
         body {
