--- a/01-前端开发基础/11-元素定位/01_相对定位.html
+++ b/01-前端开发基础/11-元素定位/01_相对定位.html
@@ -14,6 +14,9 @@
                 ② 可以通过 left、right、top、bottom 进行定位。
                 ③ 定位的参照对象是元素自己原来的位置。
             */
+            /* 
+                应用场景：在不影响其它元素位置的前提下，对当前元素的位置进行微调。
+            */
             position: relative;
 
             left: 30px;
