--- a/01-前端开发基础/11-元素定位/02_绝对定位.html
+++ b/01-前端开发基础/11-元素定位/02_绝对定位.html
@@ -12,7 +12,7 @@
             绝对定位的参照对象是最邻近的定位祖先元素，如果找不到这样的祖先元素，参照对象就是视口。
         */
         /* 
-            定位元素：position 不是 static 的元素，即 positioni 是 relative、absolute、fixed 的元素。
+            定位元素：position 不是 static 的元素，即 position 是 relative、absolute、fixed 的元素。
         */
     </style>
 </head>
