--- a/01-前端开发基础/11-元素定位/05_绝对定位的练习.html
+++ b/01-前端开发基础/11-元素定位/05_绝对定位的练习.html
@@ -12,20 +12,72 @@
       padding: 0;
     }
 
+    a {
+      text-decoration: none;
+      color: #333;
+    }
+
     .item {
       width: 140px;
       margin: 40px auto;
     }
 
     .item .top {
+      position: relative;
       background-color: pink;
     }
 
     .item .top img {
+      /* 将图片下面多出来的区域去除 */
       vertical-align: top;
     }
 
-    .item .bottom {}
+    .item .top .cover {
+      position: absolute;
+      left: 0;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      background: url(./images/music_sprite_01.png) no-repeat;
+      background-position: 0 0;
+    }
+
+    .item .top .info {
+      position: absolute;
+      left: 0;
+      bottom: 0;
+      right: 0;
+      height: 27px;
+      line-height: 27px;
+      font-size: 12px;
+      color: #ccc;
+      padding: 0 5px;
+      background: url(./images/music_sprite_01.png) no-repeat;
+      background-position: 0 -537px;
+    }
+
+    .item .info .icon {
+      display: inline-block;
+      font-style: normal;
+      width: 14px;
+      height: 11px;
+      background: url(./images/music_sprite_02.png) no-repeat;
+      background-position: 0 -24px;
+    }
+
+    .item .info .count {
+      margin-left: 4px;
+    }
+
+    .item .bottom {
+      display: block;
+      margin-top: 8px;
+      font-size: 14px;
+      /* 单行文本换行 */
+      /* text-overflow: ellipsis;
+      overflow: hidden;
+      white-space: nowrap; */
+    }
   </style>
 </head>
 
@@ -33,8 +85,15 @@
   <div class="item">
     <div class="top">
       <img src="./images/music_album01.jpg" alt="">
+      <a class="cover" href="#"></a>
+      <div class="info">
+        <i class="icon"></i>
+        <span class="count">62万</span>
+      </div>
     </div>
-    <div class="bottom">天气好的话，把耳朵分给我一半吧</div>
+    <a class="bottom" href="#">
+      天气好的话，把耳朵分给我一半吧
+    </a>
   </div>
 </body>
 
