--- a/01-前端开发基础/11-元素定位/06_粘性定位.html
+++ b/01-前端开发基础/11-元素定位/06_粘性定位.html
@@ -14,6 +14,7 @@
 
     .nav {
       padding: 20px;
+      /* height: 50px; */
       background-color: pink;
       position: sticky;
       top: 0;
