--- a/01-前端开发基础/12-浮动/01_浮动的规则1.html
+++ b/01-前端开发基础/12-浮动/01_浮动的规则1.html
@@ -12,11 +12,6 @@
       padding: 0;
     }
 
-    .item {
-      /* width: 200px;
-      height: 200px; */
-    }
-
     .item1 {
       /* 脱离标准流 */
       float: left;
@@ -32,8 +27,8 @@
 </head>
 
 <body>
-  <div class="item item1">1</div>
-  <div class="item item2">2</div>
+  <div class="item1">1</div>
+  <div class="item2">2</div>
 </body>
 
 </html>
