--- a/01-前端开发基础/12-浮动/05_京东.html
+++ b/01-前端开发基础/12-浮动/05_京东.html
@@ -39,7 +39,7 @@
       margin-top: 100px;
     }
 
-    .wrap ul li {
+    .wrap .item {
       float: left;
       width: 230px;
       height: 322px;
@@ -47,7 +47,7 @@
       background-color: red;
     }
 
-    .wrap ul li:nth-child(5n) {
+    .wrap .item:nth-child(5n) {
       margin-right: 0;
     }
   </style>
