--- a/01-前端开发基础/12-浮动/05_京东.html
+++ b/01-前端开发基础/12-浮动/05_京东.html
@@ -12,6 +12,10 @@
       padding: 0;
     }
 
+    body {
+      background-color: #f4f4f4;
+    }
+
     ul,
     li {
       list-style: none;
@@ -44,7 +48,7 @@
       width: 230px;
       height: 322px;
       margin-right: calc(50px / 4);
-      background-color: red;
+      background-color: skyblue;
     }
 
     .wrap .item:nth-child(5n) {
