--- a/01-前端开发基础/12-浮动/07_考拉.html
+++ b/01-前端开发基础/12-浮动/07_考拉.html
@@ -56,6 +56,10 @@
       background-color: #fff;
     }
 
+    .brand .item a:nth-child(n+1) {
+      border-left: 0;
+    }
+
     .item a img {
       position: absolute;
       left: 0;
