--- a/01-前端开发基础/12-浮动/07_考拉.html
+++ b/01-前端开发基础/12-浮动/07_考拉.html
@@ -56,7 +56,7 @@
       background-color: #fff;
     }
 
-    .brand .item a:nth-child(n+1) {
+    .brand .item:nth-child(n+2) a {
       border-left: 0;
     }
 
