--- a/01-前端开发基础/13-Flex/01_Flex初识.html
+++ b/01-前端开发基础/13-Flex/01_Flex初识.html
@@ -10,14 +10,17 @@
     .box {
       /* 块级盒子的 flex-container */
       display: flex;
-      width: 1200px;
+      width: 200px;
+      height: 200px;
       background-color: pink;
       margin: 0 auto;
+
+      flex-wrap: wrap;
     }
 
     .item {
-      width: 200px;
-      height: 200px;
+      width: 60px;
+      height: 60px;
       background-color: red;
     }
   </style>
@@ -28,6 +31,8 @@
     <div class="item">1</div>
     <div class="item">2</div>
     <div class="item">3</div>
+    <div class="item">4</div>
+    <div class="item">5</div>
   </div>
 </body>
 
