--- a/01-前端开发基础/13-Flex/05_align_items.html
+++ b/01-前端开发基础/13-Flex/05_align_items.html
@@ -19,6 +19,7 @@
       align-items: center;
       /* 基线对齐 */
       align-items: baseline;
+      align-items: normal;
 
       flex-wrap: wrap;
 
