--- a/01-前端开发基础/13-Flex/09_item_flex-grow.html
+++ b/01-前端开发基础/13-Flex/09_item_flex-grow.html
@@ -21,10 +21,14 @@
         可以设置非负数字，默认为 0 。
         当 flex container 在 main axis 方向上有剩余的 size 的时候，flex-grow 属性才会生效。
       */
-      flex-grow: 1;
+      /* flex-grow: 1; */
 
       width: 120px;
       height: 120px;
+    }
+
+    .item1 {
+      flex-grow: 1;
     }
 
   </style>
