--- a/01-前端开发基础/13-Flex/09_item_flex-grow.html
+++ b/01-前端开发基础/13-Flex/09_item_flex-grow.html
@@ -17,7 +17,7 @@
 
     .item {
       /* 
-        flex-grow 决定了 flex-items 如何扩展（拉伸）
+        flex-grow 决定了 flex-items 如何扩展（拉伸）。
         可以设置非负数字，默认为 0 。
         当 flex container 在 main axis 方向上有剩余的 size 的时候，flex-grow 属性才会生效。
       */
