--- a/01-前端开发基础/13-Flex/10_flex布局常见问题.html
+++ b/01-前端开发基础/13-Flex/10_flex布局常见问题.html
@@ -20,6 +20,13 @@
       height: 140px;
     }
 
+    /* .box::after{
+      content: '';
+      display: table;
+    } */
+    span {
+      width: 110px;
+    }
   </style>
 </head>
 
@@ -31,6 +38,9 @@
     <div class="item item3 random-bg">4</div>
     <div class="item item3 random-bg">5</div>
     <div class="item item3 random-bg">6</div>
+    <!-- 添加 span 的个数是列数-2  -->
+    <span></span>
+    <span></span>
   </div>
 
   <script>
