--- a/01-前端开发基础/13-Flex/10_flex布局常见问题.html
+++ b/01-前端开发基础/13-Flex/10_flex布局常见问题.html
@@ -15,16 +15,12 @@
       background-color: #ccc;
     }
 
-    .item {
+    .box .item {
       width: 110px;
       height: 140px;
     }
 
-    /* .box::after{
-      content: '';
-      display: table;
-    } */
-    span {
+    .box span {
       width: 110px;
     }
   </style>
@@ -38,7 +34,6 @@
     <div class="item item3 random-bg">4</div>
     <div class="item item3 random-bg">5</div>
     <div class="item item3 random-bg">6</div>
-    <!-- 添加 span 的个数是列数-2  -->
     <span></span>
     <span></span>
   </div>
