--- a/01-前端开发基础/13-Flex/10_flex布局常见问题.html
+++ b/01-前端开发基础/13-Flex/10_flex布局常见问题.html
@@ -34,6 +34,7 @@
     <div class="item item3 random-bg">4</div>
     <div class="item item3 random-bg">5</div>
     <div class="item item3 random-bg">6</div>
+    <!-- span 的个数是列数-2 -->
     <span></span>
     <span></span>
   </div>
