--- a/01-前端开发基础/15-网易云音乐/index.html
+++ b/01-前端开发基础/15-网易云音乐/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 
 <head>
   <meta charset="UTF-8">
@@ -11,7 +11,18 @@
 </head>
 
 <body>
-  <h2>网易云音乐</h2>
+  <!-- 顶部 -->
+  <div class="header">
+    <div class="top-bar header-wrapper">
+      <div class="left">
+        <h1 class="logo">
+          <a href="#">网易云音乐</a>
+        </h1>
+      </div>
+      <div class="right">2</div>
+    </div>
+    <div class="top-nav header-wrapper"></div>
+  </div>
 </body>
 
 </html>
