--- a/01-前端开发基础/15-网易云音乐/index.html
+++ b/01-前端开发基础/15-网易云音乐/index.html
@@ -18,6 +18,26 @@
         <h1 class="logo">
           <a href="#">网易云音乐</a>
         </h1>
+        <ul class="list">
+          <li>
+            <a href="#" class="item">发现音乐</a>
+          </li>
+          <li>
+            <a href="#" class="item active">我的音乐</a>
+          </li>
+          <li>
+            <a href="#" class="item">关注</a>
+          </li>
+          <li>
+            <a href="#" class="item">商城</a>
+          </li>
+          <li>
+            <a href="#" class="item">音乐人</a>
+          </li>
+          <li>
+            <a href="#" class="item">下载客户端</a>
+          </li>
+        </ul>
       </div>
       <div class="right">2</div>
     </div>
