--- a/01-前端开发基础/15-网易云音乐/index.html
+++ b/01-前端开发基础/15-网易云音乐/index.html
@@ -35,7 +35,7 @@
             <a href="#" class="item">音乐人</a>
           </li>
           <li>
-            <a href="#" class="item">下载客户端</a>
+            <a href="#" class="item download">下载客户端</a>
           </li>
         </ul>
       </div>
