🎨: 网易云音乐

--- a/01-前端开发基础/15-网易云音乐/index.html
+++ b/01-前端开发基础/15-网易云音乐/index.html
@@ -3,45 +3,17 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta content="IE=edge" http-equiv="X-UA-Compatible">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>Document</title>
-  <link rel="stylesheet" href="./css/reset.css">
-  <link rel="stylesheet" href="./css/index.css">
+  <link href="./css/reset.css" rel="stylesheet">
+  <link href="./css/index.css" rel="stylesheet">
 </head>
 
 <body>
-  <!-- 顶部 -->
+  <!-- header -->
   <div class="header">
-    <div class="top-bar header-wrapper">
-      <div class="left">
-        <h1 class="logo">
-          <a href="#">网易云音乐</a>
-        </h1>
-        <ul class="list">
-          <li>
-            <a href="#" class="item">发现音乐</a>
-          </li>
-          <li>
-            <a href="#" class="item active">我的音乐</a>
-          </li>
-          <li>
-            <a href="#" class="item">关注</a>
-          </li>
-          <li>
-            <a href="#" class="item">商城</a>
-          </li>
-          <li>
-            <a href="#" class="item">音乐人</a>
-          </li>
-          <li>
-            <a href="#" class="item download">下载客户端</a>
-          </li>
-        </ul>
-      </div>
-      <div class="right">2</div>
-    </div>
-    <div class="top-nav header-wrapper"></div>
+    
   </div>
 </body>
 
