--- a/01-前端开发基础/15-网易云音乐/index.html
+++ b/01-前端开发基础/15-网易云音乐/index.html
@@ -13,7 +13,34 @@
 <body>
   <!-- header -->
   <div class="header">
-    
+    <div class="top-bar">
+      <div class="wrapper">
+        <div class="left">
+          <h2 class="logo">
+            <a href="#">网易云音乐</a>
+          </h2>
+          <ul class="list">
+            <li>
+              <a href="#">发现音乐</a>
+            </li>
+            <li>
+              <a href="#">我的音乐</a>
+            </li>
+            <li>
+              <a href="#">关注</a>
+            </li>
+            <li>
+              <a href="#">音乐人</a>
+            </li>
+            <li>
+              <a href="#">下载客户端</a>
+            </li>
+          </ul>
+        </div>
+        <div class="right">登录</div>
+      </div>
+    </div>
+    <div class="top-nav">2</div>
   </div>
 </body>
 
