🎨: 网易云音乐

--- a/01-前端开发基础/15-网易云音乐/index.html
+++ b/01-前端开发基础/15-网易云音乐/index.html
@@ -21,26 +21,54 @@
           </h1>
           <ul class="list">
             <li>
-              <a href="#">发现音乐</a>
+              <a class="item active" href="#">发现音乐</a>
             </li>
             <li>
-              <a href="#">我的音乐</a>
+              <a class="item" href="#">我的音乐</a>
             </li>
             <li>
-              <a href="#">关注</a>
+              <a class="item" href="#">关注</a>
             </li>
             <li>
-              <a href="#">音乐人</a>
+              <a class="item" href="#">商城</a>
             </li>
             <li>
-              <a href="#">下载客户端</a>
+              <a class="item" href="#">音乐人</a>
+            </li>
+            <li>
+              <a class="item download" href="#">下载客户端</a>
             </li>
           </ul>
         </div>
-        <div class="right">登录</div>
+        <div class="right">
+          登录
+        </div>
       </div>
     </div>
-    <div class="top-nav">2</div>
+    <div class="top-nav">
+      <div class="wrapper">
+        <ul class="list">
+          <li>
+            <a href="#">推荐</a>
+          </li>
+          <li>
+            <a href="#">排行榜</a>
+          </li>
+          <li>
+            <a href="#">歌单</a>
+          </li>
+          <li>
+            <a href="#">主播电台</a>
+          </li>
+          <li>
+            <a href="#">歌手</a>
+          </li>
+          <li>
+            <a href="#">新碟上架</a>
+          </li>
+        </ul>
+      </div>
+    </div>
   </div>
 </body>
 
