--- a/01-前端开发基础/15-网易云音乐/index.html
+++ b/01-前端开发基础/15-网易云音乐/index.html
@@ -41,7 +41,17 @@
           </ul>
         </div>
         <div class="right">
-          登录
+          <div class="search">
+            <label>
+              <input placeholder="音乐/视频/电台/用户" type="text" value="">
+            </label>
+          </div>
+          <div class="author">
+            <a href="#">创作者中心</a>
+          </div>
+          <div class="login">
+            <a href="#">登录</a>
+          </div>
         </div>
       </div>
     </div>
