🎨: 网易云音乐

--- a/01-前端开发基础/15-网易云音乐/index.html
+++ b/01-前端开发基础/15-网易云音乐/index.html
@@ -59,22 +59,22 @@
       <div class="wrapper">
         <ul class="list">
           <li>
-            <a href="#">推荐</a>
+            <a class="item active" href="#">推荐</a>
           </li>
           <li>
-            <a href="#">排行榜</a>
+            <a class="item" href="#">排行榜</a>
           </li>
           <li>
-            <a href="#">歌单</a>
+            <a class="item" href="#">歌单</a>
           </li>
           <li>
-            <a href="#">主播电台</a>
+            <a class="item" href="#">主播电台</a>
           </li>
           <li>
-            <a href="#">歌手</a>
+            <a class="item" href="#">歌手</a>
           </li>
           <li>
-            <a href="#">新碟上架</a>
+            <a class="item" href="#">新碟上架</a>
           </li>
         </ul>
       </div>
