🎨: 网易云音乐

--- a/01-前端开发基础/15-网易云音乐/index.html
+++ b/01-前端开发基础/15-网易云音乐/index.html
@@ -82,7 +82,43 @@
   </div>
   <!-- banner -->
   <div class="banner">
-    
+    <div class="wrapper">
+      <div class="left">
+        <ul class="list">
+          <li>
+            <a class="item" href="#">
+              <img alt="" src="./images/banner.jpg">
+            </a>
+          </li>
+          <li>
+            <a class="item" href="#">
+              <img alt="" src="./images/banner.jpg">
+            </a>
+          </li>
+          <li>
+            <a class="item" href="#">
+              <img alt="" src="./images/banner.jpg">
+            </a>
+          </li>
+          <li>
+            <a class="item" href="#">
+              <img alt="" src="./images/banner.jpg">
+            </a>
+          </li>
+          <li>
+            <a class="item" href="#">
+              <img alt="" src="./images/banner.jpg">
+            </a>
+          </li>
+          <li>
+            <a class="item" href="#">
+              <img alt="" src="./images/banner.jpg">
+            </a>
+          </li>
+        </ul>
+      </div>
+      <div class="right">222</div>
+    </div>
   </div>
 </body>
 
