🎨: 前端开发基础

--- a/01-前端开发基础/03-CSS基础/08-最基础最常用的CSS属性_width_height.html
+++ b/01-前端开发基础/03-CSS基础/08-最基础最常用的CSS属性_width_height.html
@@ -8,10 +8,13 @@
   <style>
     .title {
       font-size: 20px;
-      /* 前景色（文字颜色） */
       color: red;
-      /* 设置装饰线 */
-      text-decoration: underline;
+      /* 宽度 */
+      width: 200px;
+      /* 高度 */
+      height: 200px;
+      background-color: pink;
+
     }
   </style>
 </head>
