🎨: 前端开发基础

--- a/01-前端开发基础/03-CSS基础/13_CSS中设置颜色.html
+++ b/01-前端开发基础/03-CSS基础/13_CSS中设置颜色.html
@@ -9,8 +9,8 @@
     .box {
       width: 200px;
       height: 200px;
-      /* CSS 可以通过颜色关键字来设置颜色 */
-      background-color: pink;
+      /* CSS 可以通过 RGB 来设置颜色，RGB 的范围是 0 -255 ；其中，R 表示红色，G 表示绿色，B 表示蓝色。 */
+      background-color: rgb(255, 192, 203);
     }
   </style>
 </head>
