--- a/01-前端开发基础/04-CSS进阶/01_文本属性-text-indent.html
+++ b/01-前端开发基础/04-CSS进阶/01_文本属性-text-indent.html
@@ -17,9 +17,11 @@
   </style>
 </head>
 <body>
-  <p>黑洞（英文：Black
+  <p>
+    黑洞（英文：Black
     Hole）是现代广义相对论中，存在于宇宙空间中的一种天体。黑洞的引力极其强大，使得视界内的逃逸速度大于光速。故而，“黑洞是时空曲率大到光都无法从其事件视界逃脱的天体”。
     黑洞（英文：Black
-    Hole）是现代广义相对论中，存在于宇宙空间中的一种天体。黑洞的引力极其强大，使得视界内的逃逸速度大于光速。故而，“黑洞是时空曲率大到光都无法从其事件视界逃脱的天体”。</p>
+    Hole）是现代广义相对论中，存在于宇宙空间中的一种天体。黑洞的引力极其强大，使得视界内的逃逸速度大于光速。故而，“黑洞是时空曲率大到光都无法从其事件视界逃脱的天体”。
+  </p>
 </body>
 </html>
