🎨: 前端开发基础

--- a/01-前端开发基础/04-CSS进阶/03_文本属性-text-align.html
+++ b/01-前端开发基础/04-CSS进阶/03_文本属性-text-align.html
@@ -11,7 +11,7 @@
       height: 200px;
       background-color: pink;
 
-      /* 文本对齐方式 */
+      /* 文本对齐方式：居中对齐 */
       text-align: center;
     }
   </style>
