--- a/01-前端开发基础/04-CSS进阶/06_文本属性-text-align.html
+++ b/01-前端开发基础/04-CSS进阶/06_文本属性-text-align.html
@@ -7,16 +7,24 @@
   <title>Title</title>
   <style>
     .box {
-      width: 200px;
-      height: 200px;
+      width: 500px;
+      height: 300px;
       background-color: pink;
 
-      /* 文本水平居中 */
+      /* 块级元素不生效！！！ */
       text-align: center;
+    }
+
+    .inner {
+      width: 200px;
+      height: 200px;
+      background-color: red;
     }
   </style>
 </head>
 <body>
-  <div class="box">我是div元素</div>
+  <div class="box">
+    <div class="inner"></div>
+  </div>
 </body>
 </html>
