🎨: 前端开发基础

--- a/01-前端开发基础/04-CSS进阶/07_文本属性-text-align.html
+++ b/01-前端开发基础/04-CSS进阶/07_文本属性-text-align.html
@@ -16,8 +16,9 @@
     }
 
     .inner {
+      /* 设置 div 为行内块元素 */
       display: inline-block;
-      
+
       width: 200px;
       height: 200px;
       background-color: red;
