🎨: 前端开发基础

--- a/01-前端开发基础/04-CSS进阶/08_字体属性-font-size.html
+++ b/01-前端开发基础/04-CSS进阶/08_字体属性-font-size.html
@@ -5,8 +5,13 @@
   <meta content="IE=edge" http-equiv="X-UA-Compatible">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>Title</title>
+  <style>
+    .box {
+      font-size: 16px;
+    }
+  </style>
 </head>
 <body>
-  
+  <div class="box">我是div元素</div>
 </body>
 </html>
