🎨: 前端开发基础

--- a/01-前端开发基础/04-CSS进阶/09_字体属性-font-size.html
+++ b/01-前端开发基础/04-CSS进阶/09_字体属性-font-size.html
@@ -7,8 +7,11 @@
   <title>Title</title>
   <style>
     .box {
-      /* 设置字体大小，在 Chrome 浏览器，默认是 16px */
-      font-size: 20px;
+      /*
+        1em = 16px ，
+        2em = 2 * 16px = 32px
+      */
+      font-size: 2em;
     }
   </style>
 </head>
