🎨: 前端开发基础

--- a/01-前端开发基础/04-CSS进阶/09_字体属性-font-size.html
+++ b/01-前端开发基础/04-CSS进阶/09_字体属性-font-size.html
@@ -8,8 +8,9 @@
   <style>
     .box {
       /*
-        1em = 16px ，
-        2em = 2 * 16px = 32px
+        设置字体大小：
+          1em = 16px ，
+          2em = 2 * 16px = 32px
       */
       font-size: 2em;
     }
