--- a/01-前端开发基础/04-CSS进阶/17_字体属性_font.html
+++ b/01-前端开发基础/04-CSS进阶/17_字体属性_font.html
@@ -9,6 +9,7 @@
     body {
       /* font 复合属性 */
       font: 12px/1.5 Microsoft YaHei, Heiti SC, tahoma, arial, Hiragino Sans GB, "\5B8B\4F53", sans-serif;
+      /* 文字颜色 */
       color: #666;
     }
   </style>
