--- a/01-前端开发基础/04-CSS进阶/21_基础选择器_id选择器.html
+++ b/01-前端开发基础/04-CSS进阶/21_基础选择器_id选择器.html
@@ -6,15 +6,16 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>Title</title>
   <style>
-    /* 类选择器 */
-    .box {
-      width: 200px;
-      height: 200px;
-      background-color: pink;
+    /* id 选择器 */
+    #two {
+      color: red;
+      font-size: 12px;
     }
   </style>
 </head>
 <body>
-  <div class="box">我是div元素</div>
+  <p>11111</p>
+  <p id="two">22222</p>
+  <p>33333</p>
 </body>
 </html>
