--- a/01-前端开发基础/04-CSS进阶/36_伪元素.html
+++ b/01-前端开发基础/04-CSS进阶/36_伪元素.html
@@ -25,9 +25,28 @@
       content: '大米';
       background-color: skyblue;
     }
+
+    p {
+      position: relative;
+
+      width: 180px;
+      /* 单行文本省略 */
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+    }
+
+    p::after {
+      position: absolute;
+      right: 0;
+      top: 0;
+      content: url("./images/hot.svg");
+    }
   </style>
 </head>
 <body>
   <div class="box">爱</div>
+
+  <p>神舟十五号乘组返回全纪实</p>
 </body>
 </html>
