🎨: 前端开发基础

--- a/01-前端开发基础/05-CSS特性/07_块级元素和行内级元素的宽高.html
+++ b/01-前端开发基础/05-CSS特性/07_块级元素和行内级元素的宽高.html
@@ -13,7 +13,7 @@
     }
 
     span {
-      /* 行内非替换元素设置宽度和高度不生效！ */
+      /* 行内（非替换）级元素设置宽度和高度不生效！ */
       width: 200px;
       height: 200px;
       background-color: red;
