: 前端开发基础

--- a/01-前端开发基础/05-CSS特性/10_行内块元素.html
+++ b/01-前端开发基础/05-CSS特性/10_行内块元素.html
@@ -4,23 +4,17 @@
   <meta charset="UTF-8">
   <meta content="IE=edge" http-equiv="X-UA-Compatible">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Title</title>
+  <title>Document</title>
   <style>
-    .box {
+    /* 行内块元素：一行可以显示多个，可以设置宽高 */
+    input {
       width: 200px;
-      height: 200px;
-      background-color: pink;
-    }
-
-    .box span {
-      background-color: skyblue;
+      height: 20px;
     }
   </style>
 </head>
 <body>
-  <div class="box">
-    <span>abc</span>
-    <span>123</span>
-  </div>
+  <input type="text">
+  <input type="text">
 </body>
 </html>
