--- a/01-前端开发基础/06-盒子模型/07_盒子模型_margin&padding.html
+++ b/01-前端开发基础/06-盒子模型/07_盒子模型_margin&padding.html
@@ -30,6 +30,9 @@
   </style>
 </head>
 <body>
+  <!--
+    父子之间的距离推荐使用 padding
+   -->
   <div class="container">
     <div class="box"></div>
   </div>
