--- a/01-前端开发基础/06-盒子模型/09_盒子阴影.html
+++ b/01-前端开发基础/06-盒子模型/09_盒子阴影.html
@@ -13,7 +13,7 @@
       /*
         盒子阴影 x 偏移量 | y 偏移量 | 阴影模糊半径 | 阴影扩散半径 | 阴影颜色
        */
-      box-shadow: 5px 5px 5px 2px rgba(0, 0, 0, .3);
+      box-shadow: 5px 5px 5px 2px rgba(0, 0, 0, .3), 10px 10px 5px 2px orange;
     }
   </style>
 </head>
