--- a/01-前端开发基础/06-盒子模型/11_行内非替换元素的特殊性.html
+++ b/01-前端开发基础/06-盒子模型/11_行内非替换元素的特殊性.html
@@ -9,6 +9,10 @@
     .box {
       background-color: pink;
 
+      /* width 和 height 压根不生效 */
+      width: 300px;
+      height: 300px;
+
       /*
         上下会被撑起来，但是不占据空间
       */
