--- a/01-前端开发基础/06-盒子模型/12_小米商城案例.html
+++ b/01-前端开发基础/06-盒子模型/12_小米商城案例.html
@@ -22,7 +22,7 @@
     }
 
     .box:hover {
-      box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, .2);
+      box-shadow: 10px 5px rgba(0, 0, 0, .2);
     }
 
     .box img {
