--- a/01-前端开发基础/06-盒子模型/12_小米商城案例.html
+++ b/01-前端开发基础/06-盒子模型/12_小米商城案例.html
@@ -12,37 +12,50 @@
       box-sizing: border-box;
     }
 
-    .box {
+    body {
+      background-color: #f5f5f5;
+    }
+
+    ul, li {
+      list-style: none;
+    }
+
+    a {
+      text-decoration: none;
+      color: #757575;
+    }
+
+    .item {
       text-align: center;
       width: 234px;
       height: 300px;
-      border: 1px solid rgba(0, 0, 0, .2);
-      margin: 20px auto;
+      margin: 200px auto;
       padding: 20px 37px;
+      background-color: #fff;
     }
 
-    .box:hover {
-      box-shadow: 10px 5px rgba(0, 0, 0, .2);
+    .item:hover {
+      box-shadow: 0 0 10px 5px rgba(0, 0, 0, .2);
     }
 
-    .box img {
+    .item img {
       width: 160px;
     }
 
-    .box .title {
+    .item .title {
       margin-top: 18px;
       color: #333333;
       font-size: 14px;
       line-height: 21px;
     }
 
-    .box .desc {
+    .item .desc {
       color: #b0b0b0;
       font-size: 12px;
       line-height: 18px;
     }
 
-    .box .price {
+    .item .price {
       margin-top: 10px;
       color: #ff6700;
       font-size: 14px;
@@ -51,11 +64,15 @@
   </style>
 </head>
 <body>
-  <div class="box">
-    <img alt="" src="./images/img.png">
-    <p class="title">Redmi Note 12T Pro</p>
-    <p class="desc">年度 LCD 屏幕之光</p>
-    <h3 class="price">1599元起</h3>
-  </div>
+  <ul>
+    <li class="item">
+      <a href="#">
+        <img alt="" src="./images/xiaomi-iphone.webp">
+        <p class="title">Redmi Note 12T Pro</p>
+        <p class="desc">年度 LCD 屏幕之光</p>
+        <h3 class="price">1599元起</h3>
+      </a>
+    </li>
+  </ul>
 </body>
 </html>
