: 前端开发基础

--- a/01-前端开发基础/06-盒子模型/12_小米商城案例.html
+++ b/01-前端开发基础/06-盒子模型/12_小米商城案例.html
@@ -53,6 +53,10 @@
       color: #b0b0b0;
       font-size: 12px;
       line-height: 18px;
+      /* 单行文本溢出处理 */
+      overflow: hidden;
+      white-space: nowrap;
+      text-overflow: ellipsis;
     }
 
     .item .price {
