: 前端开发基础

--- a/01-前端开发基础/06-盒子模型/12_小米商城案例.html
+++ b/01-前端开发基础/06-盒子模型/12_小米商城案例.html
@@ -32,10 +32,12 @@
       padding: 20px 37px;
       text-align: center;
       background-color: #fff;
+      transition: all 0.5s;
     }
 
     .item:hover {
       box-shadow: 0 0 10px 5px rgba(0, 0, 0, .2);
+      transform: translateY(-5px);
     }
 
     .item img {
@@ -44,7 +46,7 @@
 
     .item .title {
       margin-top: 18px;
-      color: #333333;
+      color: #333;
       font-size: 14px;
       line-height: 21px;
     }
