: 前端开发基础

--- a/01-前端开发基础/06-盒子模型/12_小米商城案例.html
+++ b/01-前端开发基础/06-盒子模型/12_小米商城案例.html
@@ -25,14 +25,27 @@
       color: #757575;
     }
 
+    .box {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+
+      width: 978px;
+      /*background-color: pink;*/
+      margin: 20px auto;
+    }
+
     .item {
       width: 234px;
       height: 300px;
-      margin: 200px auto;
       padding: 20px 37px;
       text-align: center;
       background-color: #fff;
       transition: all 0.5s;
+    }
+
+    .item:nth-child(-n+4) {
+      margin-bottom: 10px;
     }
 
     .item:hover {
@@ -70,7 +83,63 @@
   </style>
 </head>
 <body>
-  <ul>
+  <ul class="box">
+    <li class="item">
+      <a href="#">
+        <img alt="" src="./images/xiaomi-iphone.webp">
+        <p class="title">Redmi Note 12T Pro</p>
+        <p class="desc">年度 LCD 屏幕之光</p>
+        <h3 class="price">1599元起</h3>
+      </a>
+    </li>
+    <li class="item">
+      <a href="#">
+        <img alt="" src="./images/xiaomi-iphone.webp">
+        <p class="title">Redmi Note 12T Pro</p>
+        <p class="desc">年度 LCD 屏幕之光</p>
+        <h3 class="price">1599元起</h3>
+      </a>
+    </li>
+    <li class="item">
+      <a href="#">
+        <img alt="" src="./images/xiaomi-iphone.webp">
+        <p class="title">Redmi Note 12T Pro</p>
+        <p class="desc">年度 LCD 屏幕之光</p>
+        <h3 class="price">1599元起</h3>
+      </a>
+    </li>
+    <li class="item">
+      <a href="#">
+        <img alt="" src="./images/xiaomi-iphone.webp">
+        <p class="title">Redmi Note 12T Pro</p>
+        <p class="desc">年度 LCD 屏幕之光</p>
+        <h3 class="price">1599元起</h3>
+      </a>
+    </li>
+    <li class="item">
+      <a href="#">
+        <img alt="" src="./images/xiaomi-iphone.webp">
+        <p class="title">Redmi Note 12T Pro</p>
+        <p class="desc">年度 LCD 屏幕之光</p>
+        <h3 class="price">1599元起</h3>
+      </a>
+    </li>
+    <li class="item">
+      <a href="#">
+        <img alt="" src="./images/xiaomi-iphone.webp">
+        <p class="title">Redmi Note 12T Pro</p>
+        <p class="desc">年度 LCD 屏幕之光</p>
+        <h3 class="price">1599元起</h3>
+      </a>
+    </li>
+    <li class="item">
+      <a href="#">
+        <img alt="" src="./images/xiaomi-iphone.webp">
+        <p class="title">Redmi Note 12T Pro</p>
+        <p class="desc">年度 LCD 屏幕之光</p>
+        <h3 class="price">1599元起</h3>
+      </a>
+    </li>
     <li class="item">
       <a href="#">
         <img alt="" src="./images/xiaomi-iphone.webp">
