--- a/01-前端开发基础/06-盒子模型/12_小米商城案例.html
+++ b/01-前端开发基础/06-盒子模型/12_小米商城案例.html
@@ -38,7 +38,7 @@
     .item {
       width: 234px;
       height: 300px;
-      padding: 20px 37px;
+      padding-top: 20px;
       text-align: center;
       background-color: #fff;
       transition: all 0.5s;
