--- a/01-前端开发基础/06-盒子模型/12_小米商城案例.html
+++ b/01-前端开发基础/06-盒子模型/12_小米商城案例.html
@@ -85,7 +85,7 @@
 <body>
   <ul class="box">
     <li class="item">
-      <a href="#">
+      <a href="https://www.mi.com/shop/buy/detail?product_id=18542">
         <img alt="" src="./images/xiaomi-iphone.webp">
         <p class="title">Redmi Note 12T Pro</p>
         <p class="desc">年度 LCD 屏幕之光</p>
