: 前端开发基础

--- a/01-前端开发基础/06-盒子模型/12_小米商城案例.html
+++ b/01-前端开发基础/06-盒子模型/12_小米商城案例.html
@@ -25,6 +25,10 @@
       color: #757575;
     }
 
+    h1, h2, h3, h4, h5, h6 {
+      font-weight: normal;
+    }
+
     .box {
       display: flex;
       flex-wrap: wrap;
@@ -79,6 +83,7 @@
       color: #ff6700;
       font-size: 14px;
       line-height: 21px;
+      font-weight: bold;
     }
   </style>
 </head>
