: 前端开发基础

--- a/01-前端开发基础/06-盒子模型/12_小米商城案例.html
+++ b/01-前端开发基础/06-盒子模型/12_小米商城案例.html
@@ -53,7 +53,7 @@
     }
 
     .item:hover {
-      box-shadow: 0 0 10px 5px rgba(0, 0, 0, .2);
+      box-shadow: 0 5px 10px 5px rgba(0, 0, 0, .2);
       transform: translateY(-5px);
     }
 
