: 前端开发基础

--- a/01-前端开发基础/06-盒子模型/17_表格的案例.html
+++ b/01-前端开发基础/06-盒子模型/17_表格的案例.html
@@ -14,7 +14,10 @@
     table {
       text-align: center;
       margin: 50px auto;
-      /* 边框折叠 */
+      /*
+        边框折叠
+        collapse 是折叠的意思。
+      */
       border-collapse: collapse;
     }
 
