: 前端开发基础

--- a/01-前端开发基础/06-盒子模型/17_表格的案例.html
+++ b/01-前端开发基础/06-盒子模型/17_表格的案例.html
@@ -21,7 +21,7 @@
       border-collapse: collapse;
     }
 
-    td {
+    td, th {
       padding: 5px 10px;
       border: 1px solid #000;
     }
@@ -30,11 +30,11 @@
 <body>
   <table>
     <tr>
-      <td>排名</td>
-      <td>股票名称</td>
-      <td>股票代码</td>
-      <td>股票价格</td>
-      <td>股票涨跌</td>
+      <th>排名</th>
+      <th>股票名称</th>
+      <th>股票代码</th>
+      <th>股票价格</th>
+      <th>股票涨跌</th>
     </tr>
     <tr>
       <td>1</td>
