--- a/01-前端开发基础/06-盒子模型/17_表格的案例.html
+++ b/01-前端开发基础/06-盒子模型/17_表格的案例.html
@@ -29,41 +29,45 @@
 </head>
 <body>
   <table>
-    <tr>
-      <th>排名</th>
-      <th>股票名称</th>
-      <th>股票代码</th>
-      <th>股票价格</th>
-      <th>股票涨跌</th>
-    </tr>
-    <tr>
-      <td>1</td>
-      <td>贵州茅台</td>
-      <td>600519</td>
-      <td>1800</td>
-      <td>5%</td>
-    </tr>
-    <tr>
-      <td>2</td>
-      <td>腾讯控股</td>
-      <td>00700</td>
-      <td>400</td>
-      <td>3%</td>
-    </tr>
-    <tr>
-      <td>3</td>
-      <td>五粮液</td>
-      <td>000858</td>
-      <td>160</td>
-      <td>8%</td>
-    </tr>
-    <tr>
-      <td>4</td>
-      <td>东方财富</td>
-      <td>300059</td>
-      <td>25</td>
-      <td>4%</td>
-    </tr>
+    <thead>
+      <tr>
+        <th>排名</th>
+        <th>股票名称</th>
+        <th>股票代码</th>
+        <th>股票价格</th>
+        <th>股票涨跌</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>1</td>
+        <td>贵州茅台</td>
+        <td>600519</td>
+        <td>1800</td>
+        <td>5%</td>
+      </tr>
+      <tr>
+        <td>2</td>
+        <td>腾讯控股</td>
+        <td>00700</td>
+        <td>400</td>
+        <td>3%</td>
+      </tr>
+      <tr>
+        <td>3</td>
+        <td>五粮液</td>
+        <td>000858</td>
+        <td>160</td>
+        <td>8%</td>
+      </tr>
+      <tr>
+        <td>4</td>
+        <td>东方财富</td>
+        <td>300059</td>
+        <td>25</td>
+        <td>4%</td>
+      </tr>
+    </tbody>
   </table>
 </body>
 </html>
