: 前端开发基础

--- a/01-前端开发基础/06-盒子模型/14_背景图片.html
+++ b/01-前端开发基础/06-盒子模型/14_背景图片.html
@@ -6,13 +6,17 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>Title</title>
   <style>
-    a, input {
-      outline: none;
+    .box {
+      width: 500px;
+      height: 500px;
+      /* 设置背景颜色 */
+      background-color: pink;
+      /* 设置背景图片 */
+      background-image: url(./images/1.jpg);
     }
   </style>
 </head>
 <body>
-  <a href="#">百度一下</a>
-  <input type="text">
+  <div class="box"></div>
 </body>
 </html>
