--- a/01-前端开发基础/06-盒子模型/15_背景平铺.html
+++ b/01-前端开发基础/06-盒子模型/15_背景平铺.html
@@ -13,12 +13,10 @@
       background-color: pink;
       /* 设置背景图片 */
       background-image: url(./images/1.jpg);
-      /* 背景不平铺 */
+      /* 设置背景不平铺 */
       background-repeat: no-repeat;
-      /* 背景尺寸 */
-      /*background-size: cover;*/
-      /* 背景位置 */
-      background-position: center;
+      /* 背景尺寸大小 */
+      background-size: cover;
     }
   </style>
 </head>
