--- a/01-前端开发基础/06-盒子模型/17_背景尺寸大小.html
+++ b/01-前端开发基础/06-盒子模型/17_背景尺寸大小.html
@@ -13,7 +13,7 @@
       background-color: pink;
       /* 设置背景图片 */
       background-image: url(./images/1.jpg);
-      /* 背景不平铺 */
+      /* 设置背景不平铺 */
       background-repeat: no-repeat;
     }
   </style>
