--- a/01-前端开发基础/06-盒子模型/16_背景位置.html
+++ b/01-前端开发基础/06-盒子模型/16_背景位置.html
@@ -1,21 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta content="IE=edge" http-equiv="X-UA-Compatible">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Title</title>
+  <title>Document</title>
   <style>
     .box {
-      width: 100px;
-      height: 100px;
+      width: 400px;
+      height: 400px;
       background-color: pink;
-      border: 5px solid red;
-      border-radius: 50%;
+      background-image: url(./images/1.jpg);
+      background-repeat: no-repeat;
+      /* background-position: 水平方向 垂直方向; */
+      background-position: center center;
     }
   </style>
 </head>
+
 <body>
-  <div class="box"></div>
+  <div class="box">文字</div>
 </body>
+
 </html>
