: 前端开发基础

--- a/01-前端开发基础/06-盒子模型/19_border实现三角形.html
+++ b/01-前端开发基础/06-盒子模型/19_border实现三角形.html
@@ -16,7 +16,14 @@
       /*background-color: red;*/
 
       border: 50px solid transparent;
-      border-top-color: green;
+      border-top-color: #000;
+
+      transition: all 0.3s;
+    }
+
+    .box:hover {
+      transform-origin: center 25%;
+      transform: rotate(180deg);
     }
   </style>
 </head>
