: 前端开发基础

--- a/01-前端开发基础/08-浮动/02_浮动的练习.html
+++ b/01-前端开发基础/08-浮动/02_浮动的练习.html
@@ -33,13 +33,13 @@
     }
 
     .box {
+      text-align: center;
       width: 960px;
       background-color: pink;
       margin: 20px auto;
     }
 
     .box .header {
-      text-align: center;
       line-height: 80px;
       width: 100%;
     }
@@ -66,13 +66,13 @@
     .box .nav {
       margin: 10px 0;
       height: 30px;
+      line-height: 30px;
       background-color: gray;
     }
 
     .box .left .top div {
       width: 370px;
       height: 200px;
-      text-align: center;
       line-height: 200px;
       background-color: gray;
       margin: 0 10px 10px 0;
@@ -81,7 +81,6 @@
     .box .left .bottom div {
       width: 180px;
       height: 200px;
-      text-align: center;
       line-height: 200px;
       background-color: gray;
       margin: 0 10px 0 0;
@@ -90,7 +89,6 @@
     .box .right div {
       width: 200px;
       height: 130px;
-      text-align: center;
       line-height: 130px;
       background-color: gray;
       margin: 0 0 10px 0;
@@ -111,7 +109,7 @@
       <div class="banner2 leftfix">banner2</div>
     </div>
     <!-- 菜单 -->
-    <div class="nav"></div>
+    <div class="nav">菜单</div>
     <!-- 内容 -->
     <div class="content clearfix">
       <div class="left leftfix">
