: 前端开发基础

--- a/01-前端开发基础/08-浮动/02_浮动的练习.html
+++ b/01-前端开发基础/08-浮动/02_浮动的练习.html
@@ -75,7 +75,7 @@
       height: 200px;
       line-height: 200px;
       background-color: gray;
-      margin: 0 10px 10px 0;
+      margin-right: 10px;
     }
 
     .box .left .bottom div {
@@ -83,7 +83,8 @@
       height: 200px;
       line-height: 200px;
       background-color: gray;
-      margin: 0 10px 0 0;
+      margin-top: 10px;
+      margin-right: 10px;
     }
 
     .box .right div {
@@ -91,11 +92,10 @@
       height: 130px;
       line-height: 130px;
       background-color: gray;
-      margin: 0 0 10px 0;
     }
 
-    .box .right div:last-child {
-      margin-bottom: 0;
+    .box .right div:nth-child(2) {
+      margin: 10px 0;
     }
 
   </style>
