--- a/01-前端开发基础/07-定位/01_相对定位.html
+++ b/01-前端开发基础/07-定位/01_相对定位.html
@@ -34,7 +34,9 @@
     .box2 {
       background-color: skyblue;
       /*
-        相对定位
+        相对定位：
+          ① 用于对元素自身的位置进行微调。
+          ② 和绝对定位配合使用。
       */
       position: relative;
       left: 240px;
