--- a/01-前端开发基础/09-京东/index.html
+++ b/01-前端开发基础/09-京东/index.html
@@ -5,8 +5,9 @@
   <meta content="IE=edge" http-equiv="X-UA-Compatible">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>京东商城</title>
+  <link href="./css/normalize.css" rel="stylesheet">
 </head>
 <body>
-  
+
 </body>
 </html>
