--- a/01-前端开发基础/09-京东/index.html
+++ b/01-前端开发基础/09-京东/index.html
@@ -5,9 +5,52 @@
   <meta content="IE=edge" http-equiv="X-UA-Compatible">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>京东商城</title>
-  <link href="./css/normalize.css" rel="stylesheet">
+  <link href="./css/reset.css" rel="stylesheet">
+  <link href="./css/index.css" rel="stylesheet">
 </head>
 <body>
-
+  <!-- 顶部导航条 -->
+  <div class="top-bar">
+    <!-- 版心 -->
+    <div class="container clearfix">
+      <!-- 左侧的欢迎区 -->
+      <div class="welcome left-fix">
+        <ul>
+          <li class="hello">尚品汇欢迎您</li>
+          <li class="login">请<a href="#">登录</a></li>
+          <li class="register">免费<a href="#">注册</a></li>
+        </ul>
+      </div>
+      <!-- 右侧的导航区 -->
+      <div class="nav right-fix">
+        <ul>
+          <li>
+            <a href="#">我的订单</a>
+          </li>
+          <li>
+            <a href="#">我的购物车</a>
+          </li>
+          <li>
+            <a href="#">我的尚品汇</a>
+          </li>
+          <li>
+            <a href="#">尚品汇会员</a>
+          </li>
+          <li>
+            <a href="#">企业采购</a>
+          </li>
+          <li>
+            <a href="#">关注尚品汇</a>
+          </li>
+          <li>
+            <a href="#">合作招商</a>
+          </li>
+          <li>
+            <a href="#">商家后台</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
