--- a/01-前端开发基础/09-京东/index.html
+++ b/01-前端开发基础/09-京东/index.html
@@ -52,5 +52,22 @@
       </div>
     </div>
   </div>
+  <!-- 头部 -->
+  <div class="header">
+    <!-- 版心 -->
+    <div class="container">
+      <!-- logo -->
+      <div class="logo">
+        <img alt="" src="./assets/logo.png">
+      </div>
+      <!-- 搜索框 -->
+      <div class="search">
+        <label>
+          <input type="text" value="">
+        </label>
+        <a href="#">搜索</a>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
