--- a/01-前端开发基础/09-京东/index.html
+++ b/01-前端开发基础/09-京东/index.html
@@ -223,7 +223,7 @@
         <div class="express">
           <div class="title">
             <h3>尚品快报</h3>
-            <a class="more" href="#">更多 ></a>
+            <a class="more" href="#">更多 &gt;</a>
           </div>
           <div class="info">
             <ul>
